# products-platform

./: .gitignore  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
dockerfiles/: Dockerfile  Migration.Dockerfile
infrastructure/: README.md  api-gateway.tf  database.tf  ecr.tf  iam.tf  lambdas.tf  main.tf
migration/: env.py  function.py
migration/versions/: 1db439ddd584_create_models_bundle_product_and_bundle_.py
src/common/: logger.py
src/db/: __init__.py  base.py
src/db/model/: __init__.py  base.py  bundle.py  bundle_product.py  product.py
src/io/: consumer.py
src/schema/: exemple.py
